@@ -1,4 +1,4 @@
-use Test::More tests => 13;
+use Test::More tests => 26;
 
 use warnings;
 use strict;
@@ -77,3 +77,157 @@ like($pdf->stringify(), qr/\[ -6000 \(Test Text\) \] TJ/,
      q{text with indent});
 is($width, '50.016',
    q{text with indent has expected width});
+
+# text_right
+
+$pdf = PDF::API2->new();
+$pdf->{forcecompress} = 0;
+$text = $pdf->page->text();
+$font = $pdf->corefont('Helvetica');
+$text->font($font, 12);
+
+$width = $text->text_right('Test Text');
+like($pdf->stringify(), qr/\[ 4168 \(Test Text\) \] TJ/,
+     q{text_right});
+
+# text_center
+
+$pdf = PDF::API2->new();
+$pdf->{forcecompress} = 0;
+$text = $pdf->page->text();
+$font = $pdf->corefont('Helvetica');
+$text->font($font, 12);
+
+$width = $text->text_center('Test Text');
+like($pdf->stringify(), qr/\[ 2084 \(Test Text\) \] TJ/,
+     q{text_center});
+
+# text_justified
+
+$pdf = PDF::API2->new();
+$pdf->{forcecompress} = 0;
+$text = $pdf->page->text();
+$font = $pdf->corefont('Helvetica');
+$text->font($font, 12);
+
+$width = $text->text_justified('Test Text', 72);
+like($pdf->stringify(), qr/10.992 Tw \(Test Text\) Tj 0 Tw/,
+     q{text_justified});
+
+# paragraph
+
+$pdf = PDF::API2->new();
+$pdf->{forcecompress} = 0;
+$text = $pdf->page->text();
+$font = $pdf->corefont('Helvetica');
+$text->font($font, 12);
+$text->lead(15);
+
+my $leftover = $text->paragraph(('aaa ' x 30), 144, 72);
+like($pdf->stringify(), qr/15 TL (\((aaa ){5}aaa\) Tj T\* ){4}\s*ET/,
+     q{paragraph});
+is($leftover, 'aaa aaa aaa aaa aaa aaa',
+   q{paragraph has expected leftover});
+
+# paragraph, align right
+
+$pdf = PDF::API2->new();
+$pdf->{forcecompress} = 0;
+$text = $pdf->page->text();
+$font = $pdf->corefont('Helvetica');
+$text->font($font, 12);
+$text->lead(15);
+
+$text->paragraph(('aaa ' x 10), 144, 72, -align => 'right');
+like($pdf->stringify(),
+     qr/\[ 11398 \((aaa ){5}aaa\) \] TJ T\* \[ 7506 \(aaa aaa aaa aaa\) \] TJ T\*/,
+     q{paragraph, align right});
+
+# paragraph, align center
+
+$pdf = PDF::API2->new();
+$pdf->{forcecompress} = 0;
+$text = $pdf->page->text();
+$font = $pdf->corefont('Helvetica');
+$text->font($font, 12);
+$text->lead(15);
+
+$text->paragraph(('aaa ' x 10), 144, 72, -align => 'center');
+like($pdf->stringify(),
+     qr/\[ 5699 \((aaa ){5}aaa\) \] TJ T\* \[ 3753 \(aaa aaa aaa aaa\) \] TJ T\*/,
+     q{paragraph, align center});
+
+# paragraph, justified left
+
+$pdf = PDF::API2->new();
+$pdf->{forcecompress} = 0;
+$text = $pdf->page->text();
+$font = $pdf->corefont('Helvetica');
+$text->font($font, 12);
+$text->lead(15);
+
+$text->paragraph(('aaa ' x 10), 144, 72, -align => 'justified');
+like($pdf->stringify(),
+     qr/1.204 Tw \((aaa ){5}aaa\) Tj 0 Tw T\* \(aaa aaa aaa aaa\) Tj T\*/,
+     q{paragraph, justified, last line left});
+
+# paragraph, justified right
+
+$pdf = PDF::API2->new();
+$pdf->{forcecompress} = 0;
+$text = $pdf->page->text();
+$font = $pdf->corefont('Helvetica');
+$text->font($font, 12);
+$text->lead(15);
+
+$text->paragraph(('aaa ' x 10), 144, 72, -align => 'justified',
+                 '-align-last' => 'right');
+like($pdf->stringify(),
+     qr/1.204 Tw \((aaa ){5}aaa\) Tj 0 Tw T\* \[ 7506 \((aaa ){3}aaa\) \] TJ T\*/,
+     q{paragraph, justified, last line right});
+
+# paragraph, justified center
+
+$pdf = PDF::API2->new();
+$pdf->{forcecompress} = 0;
+$text = $pdf->page->text();
+$font = $pdf->corefont('Helvetica');
+$text->font($font, 12);
+$text->lead(15);
+
+$text->paragraph(('aaa ' x 10), 144, 72, -align => 'justified',
+                 '-align-last' => 'center');
+like($pdf->stringify(),
+     qr/1.204 Tw \((aaa ){5}aaa\) Tj 0 Tw T\* \[ 3753 \((aaa ){3}aaa\) \] TJ T\*/,
+     q{paragraph, justified, last line center});
+
+# paragraph, justified, last line justified
+
+$pdf = PDF::API2->new();
+$pdf->{forcecompress} = 0;
+$text = $pdf->page->text();
+$font = $pdf->corefont('Helvetica');
+$text->font($font, 12);
+$text->lead(15);
+
+$text->paragraph(('aaa ' x 10), 144, 72, -align => 'justified',
+                 '-align-last' => 'justified');
+like($pdf->stringify(),
+     qr/1.204 Tw \((aaa ){5}aaa\) Tj 0 Tw T\* 13.482 Tw \((aaa ){3}aaa\) Tj 0 Tw/,
+     q{paragraph, justified, last line justified});
+
+# paragraphs (formerly "section")
+
+$pdf = PDF::API2->new();
+$pdf->{forcecompress} = 0;
+$text = $pdf->page->text();
+$font = $pdf->corefont('Helvetica');
+$text->font($font, 12);
+$text->lead(15);
+
+my $input = 'aaa ' x 10 . "\n\n" . 'bbb ' x 10;
+$leftover = $text->paragraphs($input, 144, 72);
+like($pdf->stringify(), qr/15 TL \((aaa ){5}aaa\) Tj T\* \((aaa ){3}aaa\) Tj T\* T\* \((bbb ){5}bbb\) Tj T\*\s+ET/,
+     q{paragraphs});
+is($leftover, 'bbb bbb bbb bbb',
+   q{paragraphs has expected leftover});
